refactor: findBooksのクエリパラメータをまとめてBeanParamにする
