# src/main/java/dev/ymkz/presenter/AddBookRequestBody.java
@@ -1,0 +1,6 @@
+package dev.ymkz.presenter;
+
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+
+@Schema(name = "AddBookRequestBody")
+public record AddBookRequestBody(String isbn, String title, Integer price) {}
